--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="/logo192.png" />
+    <link rel="apple-touch-icon" href="/profile.png" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -21,7 +21,7 @@
       rel="stylesheet"
     />
     <link rel="manifest" href="/manifest.json" />
-    <title>React App</title>
+    <title>Rami Amasha</title>
     <script defer="defer" src="/static/js/main.69a1445f.js"></script>
     <link href="/static/css/main.047c6565.css" rel="stylesheet" />
   </head>
